# window-list-overlay

./: Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
scripts/: window-list-overlay-hide  window-list-overlay-show
src/: config.rs  hyprland.rs  icons.rs  keys.rs  main.rs  overlay.rs  scroller.rs  style.css  theme.rs
